--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "superstruct": "^0.15.2"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.1",
     "@types/react": "17.0.25",
     "autoprefixer": "^10.3.6",
     "eslint": "7.32.0",
